--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,18 @@
-spring.main.allow-bean-definition-overriding=true
+server.port=0
+
+spring.datasource.url=jdbc:h2:mem:travel_agency_test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.show-sql=false
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.security.enabled=true
+
+application.security.jwt.secret-key=dummySecretKeyForTests
+application.security.jwt.expiration=86400000
+application.security.jwt.refresh-token.expiration=172800000
+
+org.springframework.security=DEBUG
