--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
 
+spring.messages.fallback-to-system-locale=false
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 spring.web.locale=uk
