--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,16 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.sql.init.mode=always
+
 
 
 # JPA and Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-
+spring.jpa.properties.hibernate.hbm2ddl.import_files=import.sql
+spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 
