--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # Server Configuration
 server.port=8080
 
-
 # H2 In-Memory Database Configuration
 spring.datasource.url=jdbc:h2:mem:travel_agency;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
@@ -9,9 +8,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-
-
 
 # JPA and Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -22,11 +18,9 @@ spring.jpa.properties.hibernate.hbm2ddl.import_files=import.sql
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-
 # Logging Configuration
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
 
 # Localization and Messaging
 spring.messages.basename=messages
@@ -38,7 +32,6 @@ spring.web.locale-resolver=fixed
 
 spring.web.resources.cache.cachecontrol.no-store=true
 spring.web.resources.cache.cachecontrol.no-cache=true
-
 
 # Thymeleaf Template Engine
 spring.thymeleaf.prefix=classpath:/templates/
@@ -59,3 +52,9 @@ application.security.jwt.refresh-token.expiration=172800000
 # Additional Logging for Spring Security & Project Package
 logging.level.org.springframework.security=DEBUG
 logging.level.com.epam.finaltask=DEBUG
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+logging.level.org.springdoc=DEBUG
+logging.level.com.epam.finaltask.restcontroller=DEBUG
+logging.level.org.springdoc.webmvc.api=DEBUG
