--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,9 +52,7 @@ application.security.jwt.refresh-token.expiration=172800000
 # Additional Logging for Spring Security & Project Package
 logging.level.org.springframework.security=DEBUG
 logging.level.com.epam.finaltask=DEBUG
-
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-logging.level.org.springdoc=DEBUG
-logging.level.com.epam.finaltask.restcontroller=DEBUG
-logging.level.org.springdoc.webmvc.api=DEBUG
+server.error.include-stacktrace=never
+server.error.include-message=never
+server.error.include-binding-errors=never
+server.error.whitelabel.enabled=false
