adding more error / exception handling, html400 401, test fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,7 +50,8 @@ application.security.jwt.refresh-token.expiration=172800000
 
 
 # Additional Logging for Spring Security & Project Package
-logging.level.org.springframework.security=DEBUG
+logging.level.com.epam.finaltask.config=INFO
+logging.level.org.springframework.config=DEBUG
 logging.level.com.epam.finaltask=DEBUG
 server.error.include-stacktrace=never
 server.error.include-message=never
