password reset / forgot / html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,3 +57,15 @@ server.error.include-stacktrace=never
 server.error.include-message=never
 server.error.include-binding-errors=never
 server.error.whitelabel.enabled=false
+
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=your@addr
+spring.mail.password=secret
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# URL для листа
+app.url.resetPassword=http://localhost:8080/auth/reset-password?token=
+# Термін дії токена
+app.resetToken.expirationMinutes=30
